tests/machine/x/rust/membership.error
line 0: compile: exit status 1
error: expected one of `,`, `.`, `?`, or an operator, found keyword `in`
 --> /workspace/mochi/tests/machine/x/rust/membership.rs:3:24
  |
3 |     println!("{:?}", 2 in nums);
  |                        ^^ expected one of `,`, `.`, `?`, or an operator

error: expected one of `,`, `.`, `?`, or an operator, found keyword `in`
 --> /workspace/mochi/tests/machine/x/rust/membership.rs:4:24
  |
4 |     println!("{:?}", 4 in nums);
  |                        ^^ expected one of `,`, `.`, `?`, or an operator

error: aborting due to 2 previous errors


fn main() {
