tests/machine/x/rust/membership.rs
fn main() {
    let mut nums = vec![1, 2, 3];
    println!("{:?}", 2 in nums);
    println!("{:?}", 4 in nums);
}
